<resources>
    <string name="AppName">Privalino</string>
    <string name="AppNameBeta">Privalino Beta</string>
    <string name="LanguageName">Deutsch</string>
    <string name="English">Englisch</string>
    <string name="LanguageNameInEnglish">German</string>
    <string name="LanguageCode">de</string>
    <string name="ContinueOnThisLanguage">Weiter auf Deutsch</string>
    <string name="YourPhone">Dein Telefon</string>
    <string name="StartText">Bitte bestätige deine Landesvorwahl und deine Telefonnummer.</string>
    <string name="ChooseCountry">Wähle ein Land</string>
    <string name="WrongCountry">Ungültige Landeskennzahl</string>
    <string name="AccountAlreadyLoggedIn">This account is already logged in from this app.</string>
    <string name="AccountSwitch">Switch</string>
    <string name="SyncContacts">Sync Contacts</string>
    <string name="SyncContactsDeleteInfo">This will remove your contacts from the Telegram servers. If \'Sync Contacts\' is enabled, contacts will be re-synced.</string>
    <string name="SyncContactsOn">Contacts from this device will be added to this account.</string>
    <string name="SyncContactsOff">Contacts from this device will not be added to this account.</string>
    <string name="SyncContactsInfoOn">Contacts from this device will be added to your account.</string>
    <string name="SyncContactsInfoOff">Turn on to import contacts from this device to your account.</string>
    <string name="SyncContactsAdded">Contacts from this device were added to your account.</string>
    <string name="YourCode">Nummer verifizieren</string>
    <string name="SentSmsCode">Wir haben dir eine SMS mit Aktivierungscode an **%1$s** gesendet.</string>
    <string name="SentAppCode">Code wurde dir per **Privalino** an deine aktive App geschickt.</string>
    <string name="SentCallCode">Wir rufen dich jetzt unter **%1$s** an.  Bitte den Anruf nicht annehmen, Privalino kümmert sich um alles.</string>
    <string name="SentCallOnly">Wir rufen **%1$s** an, um dir einen Code zu diktieren.</string>
    <string name="CallText">Wir rufen dich an in %1$d:%2$02d</string>
    <string name="SmsText">Wir senden dir eine SMS in %1$d:%2$02d</string>
    <string name="Calling">Wir rufen dich an…</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Falsche Nummer?</string>
    <string name="DidNotGetTheCode">Code nicht erhalten?</string>
    <string name="CancelAccountReset">Zurücksetzung abbrechen</string>
    <string name="CancelAccountResetInfo">Jemand mit Zugang zu deiner Telefonnummer  **%1$s** hat die Kontolöschung und Zurücksetzung der zweistufigen Bestätigung beantragt. Wenn du das nicht selbst gewesen bist, tippe den Code der SMS ein, den wir dir gerade gesendet haben.</string>
    <string name="ResetAccount">Konto zurücksetzen</string>
    <string name="ResetAccountInfo">Da dein Konto **%1$s** aktiv und durch ein Kennwort geschützt ist, löschen wir es aus Sicherheitsgründen in einer Woche.

Du kannst den Vorgang jederzeit abbrechen.</string>
    <string name="ResetAccountStatus">Du kannst dein Konto zurücksetzen in:</string>
    <string name="ResetAccountCancelledAlert">Deine vorherigen Versuche das Konto zurückzusetzen wurden durch den aktiven Nutzer abgebrochen. Bitte in 7 Tagen erneut probieren.</string>
    <string name="ResetAccountButton">ZURÜCKSETZEN</string>
    <string name="CancelLinkExpired">Link ist ungültig oder abgelaufen.</string>
    <string name="CancelLinkSuccess">Löschvorgang für dein Konto %1$s wurde abgebrochen. Du kannst das Fenster nun schließen.</string>
    <string name="YourName">Dein Name</string>
    <string name="RegisterText">Gib deinen Vor- und Nachnamen ein</string>
    <string name="FirstName">Vorname (erforderlich)</string>
    <string name="LastName">Nachname (optional)</string>
    <string name="CancelRegistration">Registrierung abbrechen</string>
    <string name="PaymentSuccessfullyPaid">Du hast erfolgreich %1$s an %2$s für %3$s übermittelt.</string>
    <string name="PaymentSuccessfullyPaidNoItem">Du hast erfolgreich %1$s an %2$s übermittelt.</string>
    <string name="PaymentCheckout">Kasse</string>
    <string name="PaymentShippingMethod">Versandarten</string>
    <string name="PaymentNoShippingMethod">Tut uns sehr leid, leider kann an deine Adresse nichts geliefert werden.</string>
    <string name="PaymentShippingInfo">Versandinfo</string>
    <string name="PaymentShippingAddress">Versandadresse</string>
    <string name="PaymentShippingAddress1Placeholder">Adresse 1 (Straße)</string>
    <string name="PaymentShippingAddress2Placeholder">Adresse 2 (Straße)</string>
    <string name="PaymentShippingCityPlaceholder">Stadt</string>
    <string name="PaymentShippingStatePlaceholder">Bundesland</string>
    <string name="PaymentShippingCountry">Land</string>
    <string name="PaymentShippingZipPlaceholder">PLZ</string>
    <string name="PaymentShippingReceiver">Empfänger</string>
    <string name="PaymentShippingName">Vor- und Nachname</string>
    <string name="PaymentShippingPhoneNumber">Telefonnummer</string>
    <string name="PaymentShippingEmailPlaceholder">E-Mail</string>
    <string name="PaymentShippingSave">Versandinformationen speichern</string>
    <string name="PaymentShippingSaveInfo">Du kannst deine Versandinformationen für zukünftige Bestellungen speichern.</string>
    <string name="PaymentCardInfo">Zahlungsinformationen</string>
    <string name="PaymentCardTitle">Zahlungskarte</string>
    <string name="PaymentCardNumber">Kartennummer</string>
    <string name="PaymentCardCvv">Kartenprüfnummer (CVV)</string>
    <string name="PaymentCardExpireDate">MM/JJ</string>
    <string name="PaymentBillingAddress">Rechnungsadresse</string>
    <string name="PaymentCardName">Vollständiger Name</string>
    <string name="PaymentCardSavePaymentInformation">Zahlungsinformationen speichern</string>
    <string name="PaymentCardSavePaymentInformationInfoLine1">Du kannst deine Zahlungsinformationen für zukünftige Bestellungen speichern.</string>
    <string name="PaymentCardSavePaymentInformationInfoLine2">Bitte *schalte die zweistufige Bestätigung ein*, um es zu aktivieren.</string>
    <string name="PaymentTransactionReview">Überprüfung der Transaktion</string>
    <string name="PaymentTransactionMessage">Möchtest du wirklich %1$s an den %2$s Bot für %3$s übermitteln?</string>
    <string name="PaymentTransactionTotal">Gesamtsumme</string>
    <string name="PaymentInvoice">RECHNUNG</string>
    <string name="PaymentTestInvoice">TEST-RECHNUNG</string>
    <string name="PaymentCheckoutPay">%1$s BEZAHLEN</string>
    <string name="PaymentCheckoutMethod">Zahlungsart</string>
    <string name="PaymentCheckoutProvider">Zahlungsbetreiber</string>
    <string name="PaymentCheckoutName">Name</string>
    <string name="PaymentCheckoutPhoneNumber">Telefonnummer</string>
    <string name="PaymentCheckoutEmail">Kontaktadresse</string>
    <string name="PaymentCheckoutShippingMethod">Versandart</string>
    <string name="PaymentReceipt">Beleg</string>
    <string name="PaymentConfirmationNewCard">Wähle eine andere Karte</string>
    <string name="PaymentConfirmationMessage">Deine Karte %1$s ist bereits gespeichert. Um mit dieser Karte zu bezahlen, tippe dein Kennwort der zweistufigen Bestätigung ein.</string>
    <string name="PaymentPrecheckoutFailed">Tut uns sehr leid. Die Zahlung wurde durch den Bot abgebrochen.</string>
    <string name="PaymentFailed">Tut uns sehr leid. Die Zahlung wurde abgelehnt.</string>
    <string name="PaymentConnectionFailed">Kann den Zahlungsserver nicht erreichen. Bitte prüfe deine Internetverbindung und versuche es erneut.</string>
    <string name="PaymentWarning">Warnung</string>
    <string name="PaymentWarningText">Weder Privalino noch %1$s haben Zugriff auf deine Kreditkartendaten. Kreditkartendetails werden nur vom Zahlungssystem %2$s abgewickelt.

Zahlungen gehen direkt an den Entwickler von %1$s. Privalino kann keine Haftung übernehmen, du handelst auf eigene Gefahr. Wende dich bei Problemen bitte direkt an den Entwickler von %1$s oder an deine Bank.</string>
    <string name="PaymentPassword">Kennwort &amp; E-Mail</string>
    <string name="PaymentPasswordTitle">Kennwort</string>
    <string name="PaymentPasswordEnter">Kennwort eingeben</string>
    <string name="PaymentPasswordReEnter">Kennwort erneut eingeben</string>
    <string name="PaymentPasswordInfo">Um deine Zahlungsinformationen zu schützen, erstelle bitte ein Kennwort. Du brauchst dieses bei der Anmeldung.</string>
    <string name="PaymentPasswordEmailTitle">Wiederherstellung</string>
    <string name="PaymentPasswordEmail">Deine E-Mail</string>
    <string name="PaymentPasswordEmailInfo">Falls du dein Kennwort vergisst, benötigen wir deine richtige E-Mail-Adresse.</string>
    <string name="PaymentPhoneToProvider">Nummer wird an %1$s als Rechnungsinformation weitergeleitet.</string>
    <string name="PaymentEmailToProvider">E-Mail wird an %1$s als Rechnungsinformation weitergeleitet.</string>
    <string name="PaymentPhoneEmailToProvider">Nummer und E-Mail werden an %1$s als Rechnungsinformation weitergeleitet.</string>
    <string name="NewConversationShortcut">Neue Unterhaltung</string>
    <string name="Settings">Einstellungen</string>
    <string name="Contacts">Kontakte</string>
    <string name="NewGroup">Neue Gruppe</string>
    <string name="Yesterday">gestern</string>
    <string name="NoResult">Keine Ergebnisse</string>
    <string name="NoChats">Noch keine Chats…</string>
    <string name="RecentlyViewed">Kürzlich angeschaut</string>
    <string name="RecentlyViewedHide">AUSBLENDEN</string>
    <string name="NoChatsHelp">Tippe unten auf den Stift für deine erste
Chatnachricht oder auf den Menüknopf
um die restlichen Optionen zu öffnen.</string>
    <string name="NoChatsContactsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Warte auf Netzwerk...</string>
    <string name="Connecting">Verbinde...</string>
    <string name="Connected">Connected</string>
    <string name="Ping">Ping: %1$d ms</string>
    <string name="Checking">Checking...</string>
    <string name="Available">Available</string>
    <string name="Unavailable">Unavailable</string>
    <string name="ConnectingConnectProxy">Connect Proxy</string>
    <string name="ConnectingToProxy">Verbinde mit Proxy...</string>
    <string name="greeting_text">Ich bin Privalino, der sichere\n Messenger für Kinder.\n\n Bitte beantworte ein paar Fragen,\n bevor du mit dem Chatten\n loslegen kannst.</string>
    <string name="pre_greeting_text">Privalino basiert auf Telegram und verwendet die gleichen Kontakte und Nachrichten. Wir empfehlen deswegen dringend, nur eine der beiden Apps zu verwenden. Wenn Telegram bereits auf diesem Telefon installiert war, sind all deine Unterhaltungen von Privalino geschützt.</string>
    <string name="parent_welcome_text">Privalino hilft dir, deine Kinder vor\n Cyber-Grooming und Mobbing\n zu schützen.\n\n Damit das klappt, brauchen wir die\n Telefonnummer deines Kindes\n sowie deine E-Mail-Adresse.</string>
    <string name="email_address_text">Deine E-Mail-Adresse</string>
    <string name="skip_text">Überspringen</string>
    <string name="phone_number_hint">000 00 00 00</string>
    <string name="country_code_hint">+49</string>
    <string name="name_hint">Vorname (optional)</string>
    <string name="age_explanation_text">Privalino kann dein Kind besser\n beschützen, wenn wir wissen,\n wie alt es ist.\n\n Du kannst deshalb optional hier\n das Geburtsjahr angeben.</string>
    <string name="age_text">Geburtsjahr:</string>
    <string name="hi_text">Hi,</string>
    <string name="child_text">Kind</string>
    <string name="parent_text">Elternteil</string>
    <string name="are_you_text">Bist du...</string>
</resources>