<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_background"
    tools:context="org.telegram.ui.ParentEmailActivity">

    <RelativeLayout
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_ab_back"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="179dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:width="328dp"
            android:height="147dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.17"
            android:text="@string/parent_welcome_text"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/add_email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:lineSpacingMultiplier="1.17"
            android:text="@string/email_address_text"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/input_field" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="carrie.ortiz@mail.com"
                android:lineSpacingMultiplier="1.20"
                android:textSize="20sp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </RelativeLayout>


    </RelativeLayout>


    <!--<ImageView-->
        <!--android:id="@+id/next_button"-->
        <!--android:layout_width="56dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="57dp"-->
        <!--android:src="@drawable/next" />-->

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:padding="15dp"
        android:src="@drawable/next" />

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/skip_text"
        android:textColor="@color/skip"
        android:visibility="gone"/>


</RelativeLayout>
