<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_background"
    tools:context="org.privalino.ui.AddChildAgeActivity">


    <RelativeLayout
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_ab_back"

            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="wrap_content"
        android:layout_height="177dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:width="328dp"
            android:height="147dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.17"
            android:text="@string/age_explanation_text"
            android:textSize="18sp"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/age_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_button"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="130dp"
                        android:gravity="center_horizontal"
                        android:lineSpacingMultiplier="1.17"
                        android:text="@string/age_text"
                        android:textSize="24sp"
                        android:textColor="@color/white"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/age_fields_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>



    <!--<ImageView-->
        <!--android:id="@+id/next_button"-->
        <!--android:layout_width="56dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="57dp"-->
        <!--android:src="@drawable/next" />-->

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:padding="15dp"
        android:src="@drawable/next" />

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/skip_text"
        android:textColor="@color/skip"
        android:visibility="gone"/>





</RelativeLayout>
